compiler/tests/fixtures/valid/reserved_action_with_precast.viv
// Reserved action where a non-initiator role carries the precast label

reserved action summon:
    roles:
        @summoner:
            as: initiator
        @summoned:
            as: character, precast
