compiler/tests/fixtures/invalid/semantics/precast_role_with_pool.viv
// Invalid: precast role with pool directive

reserved action bad-precast-pool:
    roles:
        @actor:
            as: initiator
        @helper:
            as: character, precast
            from: @actor.friends
